@startuml

title __POINTINGPLAYER's Class Diagram__\n

  namespace  {
    namespace om.example.pointingplayer {
      class com.example.pointingplayer.Application {
      }
    }
  }
  

  namespace  {
    namespace om.example.pointingplayer {
      class com.example.pointingplayer.Controller {
      }
    }
  }
  

  namespace  {
    namespace om.example.pointingplayer {
      class com.example.pointingplayer.Frame {
      }
    }
  }
  

  namespace  {
    namespace om.example.pointingplayer {
      class com.example.pointingplayer.Pointing {
      }
    }
  }
  

  com.example.pointingplayer.Application -up-|> javafx.application.Application
  com.example.pointingplayer.Controller .up.|> javafx.fxml.Initializable
  com.example.pointingplayer.Controller o-- com.example.pointingplayer.Pointing : pointing


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
